--- a/Server Kontrolpanel/Edit1.xaml
+++ b/Server Kontrolpanel/Edit1.xaml
@@ -1,12 +1,11 @@
-﻿<Window x:Class="Server_Kontrolpanel.Edit"
+﻿<Window x:Class="Server_Kontrolpanel.Edit1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Server_Kontrolpanel"
         mc:Ignorable="d"
-        Title="Edit" Height="300" Width="450"
-        WindowStartupLocation="CenterScreen">
+        Title="Edit1" Height="300" Width="450" WindowStartupLocation="CenterScreen">
     <Grid Margin="20">
         <!--TextBlock-->
         <TextBlock Text="Server name" Height="40" Width="140"
@@ -25,7 +24,7 @@
                  HorizontalAlignment="Right" VerticalAlignment="Top"
                  Margin="0,95,0,0" TextAlignment="Right"
                  FontSize="24" VerticalContentAlignment="Center"/>
-        
+
         <!--Button-->
         <Button Name="Save" Content="Save" Height="40"
                 Width="80" VerticalAlignment="Bottom"
